# django-eav

./: pyproject.toml
src/: db.sqlite3
src/core/: settings.py  urls.py
src/eav/: apps.py  models.py  serializers.py  urls.py  views.py
src/eav/migrations/: 0001_initial.py  0002_alter_value_boolean_field_alter_value_date_field_and_more.py  0003_rename_test_field_value_text_field.py  0004_alter_value_attribute_alter_value_entity.py
